# Starlight

./: .env.example  .env.simple  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GITHUB_READY.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  SECURITY_UPDATES.md  SIMPLE_SETUP.md  alembic.ini  barcode.txt  check_versions.py  docker-compose.prod.yml  docker-compose.yml  external_context.md  mkdocs.yml  nginx.conf  pyproject.toml  pytest.ini  run_all_tests.py  start_simple.py  test_celery.py  test_database.py  test_fastapi.py  test_file_handler.py  test_imports.py  test_oauth.py
.github/workflows/: ci.yml
.mimocode/plans/: 1784199601003-happy-forest.md  1784208249076-glowing-falcon.md
alembic/: env.py
alembic/versions/: 0001_create_users_table.py
app/: main.py
app/api/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py  timing.py  versioning.py
app/api/v1/: __init__.py
app/api/v1/dependencies/: auth.py
app/api/v1/endpoints/: __init__.py  auth.py  demo.py  oauth.py
app/core/cache/: __init__.py  advanced_cache.py  redis.py
app/core/config/: settings.py
app/core/errors/: __init__.py  exceptions.py  handlers.py
app/core/exceptions/: __init__.py  handlers.py
app/core/logging/: __init__.py  logger.py
app/core/performance/: __init__.py  cache.py  profiler.py
app/core/security/: auth.py  oauth.py  security_headers.py
app/infrastructure/database/: __init__.py  models.py
app/infrastructure/storage/: __init__.py  file_handler.py
app/infrastructure/tasks/: __init__.py  celery_app.py  tasks.py
app/schemas/request/: auth.py
app/schemas/response/: user.py
deployment/kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
docs/: README.md  index.md
monitoring/alerts/: alert_rules.yml  recording_rules.yml
monitoring/grafana/dashboards/: starlight-dashboard.json
monitoring/prometheus/: metrics.py  prometheus.yml
new work/android apk/: .gitignore  settings.gradle.kts
new work/android apk/app/: build.gradle.kts
new work/android apk/app/src/main/: AndroidManifest.xml
new work/android apk/app/src/main/java/com/measuremate/: MainActivity.kt  MeasureMateApp.kt  MeasureMateViewModel.kt
new work/android apk/app/src/main/java/com/measuremate/core/sensors/: CapabilityChecker.kt  LevelSensor.kt
new work/android apk/app/src/main/java/com/measuremate/core/theme/: Color.kt  Theme.kt
new work/android apk/app/src/main/java/com/measuremate/core/ui/: Components.kt
new work/android apk/app/src/main/java/com/measuremate/core/utils/: MeasurementMath.kt  PdfReportWriter.kt
new work/android apk/app/src/main/java/com/measuremate/data/database/: MeasureMateDao.kt  (+1 more)
new work/android apk/app/src/main/java/com/measuremate/navigation/: Routes.kt
new work/android apk/app/src/main/res/drawable/: ic_launcher_foreground.xml
new work/android apk/app/src/main/res/values/: styles.xml
new work/barcode-reader/: CHANGELOG.md  LICENSE.md  README.md  release.keystore  settings.gradle.kts
new work/barcode-reader/app/: build.gradle.kts  proguard-rules.pro
new work/barcode-reader/app/src/main/: AndroidManifest.xml
new work/barcode-reader/app/src/main/java/com/barcodereader/: BarcodeReaderApp.kt  MainActivity.kt
new work/barcode-reader/app/src/main/java/com/barcodereader/config/: AdConfig.kt  ApiConfig.kt  AppConfig.kt  BrandingConfig.kt  FeatureFlags.kt  FirebaseConfig.kt  SecurityConfig.kt  ThemeConfig.kt  WhiteLabelConfig.kt
new work/barcode-reader/app/src/main/java/com/barcodereader/data/: BarcodeItem.kt  BarcodeRepository.kt  HistoryStorage.kt  ScanHistory.kt
new work/barcode-reader/app/src/main/java/com/barcodereader/di/: DatabaseModule.kt  DispatcherModule.kt  PreferencesModule.kt  ServiceModule.kt
new work/barcode-reader/app/src/main/java/com/barcodereader/service/: ProductLookupService.kt
new work/barcode-reader/app/src/main/java/com/barcodereader/util/: BarcodeUtils.kt  ExportManager.kt  ExportUtils.kt  FormatUtils.kt  HapticUtils.kt
new work/barcode-reader/app/src/main/res/drawable/: ic_barcode.xml  ic_datamatrix.xml  ic_ean.xml  ic_history_empty.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_legacy.xml  ic_pdf417.xml  ic_qr_code.xml
new work/barcode-reader/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
new work/barcode-reader/app/src/main/res/values/: strings.xml  themes.xml
new work/barcode-reader/app/src/main/res/values-ar/: strings.xml
new work/barcode-reader/app/src/main/res/values-de/: strings.xml
new work/barcode-reader/app/src/main/res/values-es/: strings.xml
new work/barcode-reader/app/src/main/res/values-fr/: strings.xml
new work/barcode-reader/app/src/main/res/values-hi/: strings.xml
new work/barcode-reader/app/src/main/res/xml/: file_paths.xml
new work/barcode-reader/gradle/: libs.versions.toml
scripts/development/: setup.sh
scripts/maintenance/: cleanup.sh
scripts/testing/: run_tests.sh
tests/: conftest.py
tests/e2e/: test_user_flow.py
tests/integration/: test_api.py  test_auth_flow.py
tests/load/: locustfile.py
tests/unit/: test_auth.py
(+52 files in other folders)
